--- a/index.html
+++ b/index.html
@@ -256,6 +256,14 @@
   cursor: pointer;
 }
 
+
+    #collectionModalHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
     
 </style>
 
@@ -353,6 +361,8 @@
     <div id="memeCollections" class="scrollable-box gallery-grid"></div>
   </div>
 
+    </div>
+
 <!-- Modal for Meme Gallery -->
 <div id="galleryModal" class="modal" style="display:none;">
   <div class="modal-content">
@@ -370,13 +380,11 @@
     <div class="modal-header" id="collectionModalHeader"></div>
     <img id="collectionModalImage" src="" alt="Generated Meme Preview" />
   </div>
-</div>
+
 
 
   
-</div>
 
-</div>
 
   <div style="margin-top:30px; background:#fff3e0; padding:20px; border-radius:12px;">
   <h4>📤 Submit Your Own Meme Template</h4>
@@ -396,24 +404,23 @@
 
 
   <script>
+    const memeImages = [];
+
 let selectedMemeURL = null;
 
-function openGalleryModal(src) {
-  document.getElementById("galleryModalImage").src = src;
-  document.getElementById("galleryModal").style.display = "flex";
+function openCollectionModal(src) {
+  document.getElementById("collectionModalImage").src = src;
+  document.getElementById("collectionModal").style.display = "flex";
 
-  document.getElementById("useModalImage").onclick = () => {
-    selectedMemeURL = src;
-    document.getElementById("galleryModal").style.display = "none";
-    generateMeme();
+  const header = document.getElementById("collectionModalHeader");
+  header.innerHTML = "";
+
+  const backBtn = document.createElement("span");
+  backBtn.className = "close-button";
+  backBtn.textContent = "⬅️ Back";
+  backBtn.onclick = () => {
+    document.getElementById("collectionModal").style.display = "none";
   };
-
-  setTimeout(() => {
-    document.getElementById("galleryModal").scrollIntoView({ behavior: "smooth", block: "center" });
-  }, 100);
-}
-
-  
 
   const deleteBtn = document.createElement("button");
   deleteBtn.textContent = "Remove";
@@ -434,6 +441,9 @@ function openGalleryModal(src) {
     document.getElementById("collectionModal").scrollIntoView({ behavior: "smooth", block: "center" });
   }, 100);
 }
+
+
+  
 
 
 
@@ -500,11 +510,12 @@ function generateRandomQuote() {
 function loadCrushes() {
   const saved = JSON.parse(localStorage.getItem("studentCrushes") || "[]");
   const now = Date.now();
+  const valid = saved.filter(c => c.expiresAt > now);
   crushList.length = 0;
-  saved.forEach(c => {
-    if (c.expiresAt > now) crushList.push(c);
-  });
+  valid.forEach(c => crushList.push(c));
+  localStorage.setItem("studentCrushes", JSON.stringify(valid));
 }
+
 
 
     function reactToQuote(index, emoji) {
@@ -765,7 +776,10 @@ function showCoffeeTrivia() {
   }, 4000);
 }
 
-setInterval(showCoffeeTrivia, 7000);
+setTimeout(() => {
+  showCoffeeTrivia();
+  setInterval(showCoffeeTrivia, 7000);
+}, 3000);
 
 function downloadMeme() {
   const canvas = document.getElementById("memeCanvas");
@@ -911,11 +925,13 @@ function saveCustomMeme(url, top, bottom) {
 
 
 function memeCollections() {
-  if (confirm("Are you sure you want to clear all memes from the gallery?")) {
-    const gallery = document.getElementById("generatedMemeGallery");
-    gallery.innerHTML = "";
+  if (confirm("Are you sure you want to clear all memes from the collection?")) {
+    localStorage.setItem("generatedMemes", JSON.stringify([]));
+    renderMemeCollections();
   }
 }
+
+
 
     function saveQuotes() {
   localStorage.setItem("studentQuotes", JSON.stringify(quoteList));
@@ -948,5 +964,8 @@ window.onload = function () {
 
   <div id="emojiBurstContainer" style="position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; overflow:hidden;"></div>
 
+</div> <!-- closes collectionModal .modal-content -->
+</div> <!-- closes collectionModal -->
 </body>
 </html>
+
