--- a/index.html
+++ b/index.html
@@ -272,11 +272,15 @@
 }
 
     .modal-content img {
-  width: 100%;
+  width: auto;
+  max-width: 100%;
   height: auto;
-  max-height: 80vh;
+  max-height: 95vh;
+  display: block;
+  margin: 0 auto;
   border-radius: 12px;
 }
+
 
 .modal {
   opacity: 0;
